# music-manager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-NOTICE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_v011_release_import_state.py  0003_provider_provenance_cancellation.py  0004_multi_user_auth.py  0005_single_owner.py  0006_provider_settings.py  0006_v013_selected_results_settings.py  0007_track_file_metadata.py  0008_v013_legacy_db_compat.py  0009_provider_settings.py  0010_catalog_entities.py  0011_monitoring_enrichment.py
app/: auth.py  config.py  crypto.py  database.py  display_names.py  http.py  main.py  settings_service.py
app/fingerprint/: acoustid.py
app/jobs/: runner.py
app/metadata/: base.py  deezer.py  filename_parse.py  itunes.py  musicbrainz.py
app/models/: __init__.py  auth.py  catalog_entities.py  import_plan.py  job.py  monitoring.py  path_preview.py  release.py  release_candidate.py  settings.py  track.py  workflow.py
app/naming/: convention.py
app/routers/: auth.py  catalog.py  health.py  imports.py  jobs.py  naming.py  search.py  settings.py  tracks.py
app/schemas/: health.py  job.py  search.py  settings.py  track.py
app/services/: artist_monitoring.py  catalog.py  catalog_metadata.py  catalog_reconcile.py  dashboard.py  edition_matching.py  health_status.py  library_import.py  monitoring.py  pinned_destination.py  staging.py  workflow_state.py
app/sources/: base.py  prowlarr.py  sabnzbd.py  slskd.py  tidal.py  tidal_runner.py  tidal_status.py  youtube.py
app/templates/: artist_detail.html  artists.html  base.html  catalog_album.html  catalog_artist.html  changelog.html  downloads.html  imports.html  index.html  jobs.html  library.html  (+7 more)
docker/: Dockerfile  entrypoint.sh
docs/: migrations.md  tidal.md
scripts/: generate_branding_assets.py
tests/: conftest.py
(+56 files in other folders)
