[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-manager"
version = "0.2.0"
description = "Self-hosted music acquisition, metadata enrichment, and library naming"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "yt-dlp>=2024.5",
    "tidal-dl==2022.10.31.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "tenacity>=8.3",
    "mutagen>=1.47",
    "argon2-cffi>=23.1",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "anyio[trio]>=4.3",
    "coverage[toml]>=7.5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/css/*.css"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "ASYNC"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yt_dlp.*", "alembic.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "arg-type", "attr-defined", "index", "unused-ignore"]
